some logical changes
