# Models/All.js
@@ -2,12 +2,10 @@ const User = require('./User');
 const TollRoadWayPoint = require('./TollRoadWayPoint');
 const TollRoad = require('./TollRoad');
 const TollPoint = require('./TollPoint');
-const Location = require('./Location');
 
 module.exports = {
-  user: new User,
-  tollPoint: new TollPoint,
-  tollRoad: new TollRoad,
-  tollRoadWayPoint : new TollRoadWayPoint,
-  location : new Location
+  User: new User,
+  TollPoint: new TollPoint,
+  WayPoint : new TollRoadWayPoint,
+  TollRoad: new TollRoad
 };
